Fixed button clipping in mobile, removed unnecessary check

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -183,6 +183,9 @@
         display: flex;
         gap: 15px;
         flex-direction: row-reverse;
+        @media (max-width: 768px) {
+            flex-wrap: wrap;
+        }
 
         button {
             padding: 10px 20px;
